<?php

namespace App\Enum;

enum LegalEntityTypeEnum: string
{
	case FOP = 'fop';
	case TOV = 'tov';
}
