<?php

namespace App\Enum;

enum TaxSystemEnum: string
{
	case SIMPLIFIED = 'simplified';
	case GENERAL = 'general';
}
