<?php

namespace App\Enum;

enum TaxTypeEnum: string
{
	case EP = 'ep';
	case ESV = 'esv';
	case VZ = 'vz';
}
